--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -401,208 +401,105 @@
             </div>
           </div>
         </section>
-        <section id="scrollspyHeading4">
-          <h4>Pricing</h4>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-          </div>
+        <section id="scrollspyHeading4">          
+          <div class="container">
+            <h4 class="section-privacy-title">Pricing</h4>
+            <div class="row">
+              <div class="col-sm-6 mb-3 mb-sm-0">
+                <div class="card card-free mb-3">
+                  <div class="card-body">
+                    <span class="badge badge-ozer mb-1">Starter</span>
+                    <h3 class="card-title">Free</h3>
+                    <ul class="list-card-ozer">
+                      <li>Unlimited group audio message transcriptions</li>
+                      <li>100 contact message transcriptions</li>
+                      <li>1000 messages the first month</li>
+                    </ul>
+                    <a href="#" class="btn btn-lg btn-primary btn-card-pricing">Sign up</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="card card-pro">
+                  <div class="card-body">
+                    <span class="badge badge-ozer mb-1">Pro</span>
+                    <h3 class="card-title">$2.99/mo</h3>
+                    <ul class="list-card-ozer">
+                      <li>Unlimited group audio message transcriptions</li>
+                      <li>100 contact message transcriptions</li>
+                      <li>1000 messages the first month</li>
+                    </ul>
+                    <a href="#" class="btn btn-lg btn-outline-light btn-card-pricing">Start free trial</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
         </section>
         <section id="scrollspyHeading5">
-          <h4>FAQs</h4>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
+          <div class="container">
+            <div class="section-faq-container">
+              <div class="row">
+                <div class="col-lg-4">                
+                  <h4 class="section-privacy-title">FAQs</h4>
+                </div>
+                <div class="col-lg-8 col-12">
+              <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                      aria-expanded="true" aria-controls="collapseOne">
+                      How does Ozer work?
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      Ozer converts Whatsapp audio messages to text, without user intervention. Transcription is received in WhatsApp just after the audio message.
+                    </div>
+                  </div>
+                </div>
+                
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                      aria-expanded="false" aria-controls="collapseTwo">
+                      Can I still listen to the original audio message?
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, sequi maiores nemo ipsum laudantium culpa vel quisquam, esse quibusdam, rem explicabo natus debitis recusandae harum assumenda ullam nulla provident adipisci.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                      aria-expanded="false" aria-controls="collapseThree">
+                      But, how do you do it?
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea consectetur sed obcaecati numquam praesentium delectus quod facere, laudantium consequuntur est maxime reiciendis sunt architecto commodi voluptate quidem minima. Minima, dolore.
+                    </div>
+                  </div>
+                </div>                
+              </div>          
+              
+            </div>
           </div>
+          
+            </div>
+        </div>
         </section>
+
+
+
+
         <section id="scrollspyHeading6">
           <h4>Contact</h4>
           <div>
