--- a/assets/css/_landing.css
+++ b/assets/css/_landing.css
@@ -338,3 +338,93 @@
     margin-top: 48px;
   }
 }
+
+/* PRICING */
+.card.card-free {
+  background-color: #fff !important;
+  border-radius: 16px;
+  border: 1px solid #233D9B; 
+ } 
+ .card.card-pro {
+   background: linear-gradient(155deg, rgba(2, 0, 36, 1) 0%, rgba(17, 17, 235, 1) 66%, rgba(255, 255, 255, 1) 100%);
+   color: #fff;
+   border-radius: 16px;
+   border: none;
+ } 
+ .badge.badge-ozer {
+   background-color: #848fb1;
+   text-transform: uppercase;
+   border-radius: 8px;
+ } 
+ .list-card-ozer {
+   margin-bottom: 24px;
+   margin-top: 24px;
+ } 
+ .list-card-ozer li:not(:last-child) {
+   margin-bottom: 20px;
+ }
+a.btn.btn-lg.btn-primary.btn-card-pricing,
+a.btn.btn-lg.btn-outline-light.btn-card-pricing {
+  display: block;
+  margin: 14px;
+}
+
+@media screen and (min-width: 992px) {
+   a.btn.btn-lg.btn-primary.btn-card-pricing,
+   a.btn.btn-lg.btn-outline-light.btn-card-pricing {
+    display: inline-block;
+  }
+}
+
+/* FAQS */
+.section-faq-container{
+  margin: 100px 0;
+}
+.accordion-item {
+  margin-bottom: 16px;
+}
+.accordion {
+  border-radius: 16px;
+}
+.accordion-button {
+  background-color: #F5F7FD !important;
+  font-weight: 700;
+  padding: 16px 24px;
+  height: 56px;
+  border-radius: 16px;
+}
+.accordion-button:not(.collapsed){
+  box-shadow: none;
+}
+.accordion-button:focus {
+  box-shadow: 0 0 0 0.25rem #081957;
+}
+.accordion-button:focus(.collapsed) {
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+button:focus:not(:focus-visible) {
+  outline: 0;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.accordion-body {
+  background-color: #fff;
+  border-bottom-right-radius: 16px;
+  border-bottom-left-radius: 16px;
+}
+.accordion-button:not(.collapsed){
+  background-color: #F5F7FD !important;
+}
+.accordion-item:first-of-type {
+  border-radius: 16px;
+}
+.accordion-item:first-of-type>.accordion-header .accordion-button {
+  border-top-left-radius: 16px !important;
+  border-top-right-radius: 16px !important;
+}
+.accordion-item:not(:first-of-type), .accordion-item:last-of-type>.accordion-header .accordion-button.collapsed {
+  border-radius: 16px;
+  border-top: 1px solid #dee2e6;
+}
+
