fix: scrollspy offcanvas en mobile

--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -71,28 +71,56 @@
                   <div class="nav-scrollspy" id="navbar-scrollspy">
                     <ul class="nav nav-pills">
                       <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading1">Home</a>
+                        <a
+                          class="nav-link"
+                          href="#scrollspyHeading1"
+                          data-bs-dismiss="offcanvas"
+                          data-bs-target="#offcanvasHeader"
+                          >Home</a
+                        >
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading2"
+                        <a
+                          class="nav-link"
+                          href="#scrollspyHeading2"
+                          data-bs-dismiss="offcanvas"
+                          data-bs-target="#offcanvasHeader"
                           >Benefits</a
                         >
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading3"
+                        <a
+                          class="nav-link"
+                          href="#scrollspyHeading3"
+                          data-bs-dismiss="offcanvas"
+                          data-bs-target="#offcanvasHeader"
                           >Privacy</a
                         >
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading4"
+                        <a
+                          class="nav-link"
+                          href="#scrollspyHeading4"
+                          data-bs-dismiss="offcanvas"
+                          data-bs-target="#offcanvasHeader"
                           >Pricing</a
                         >
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading5">FAQs</a>
+                        <a
+                          class="nav-link"
+                          href="#scrollspyHeading5"
+                          data-bs-dismiss="offcanvas"
+                          data-bs-target="#offcanvasHeader"
+                          >FAQs</a
+                        >
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading6"
+                        <a
+                          class="nav-link"
+                          href="#scrollspyHeading6"
+                          data-bs-dismiss="offcanvas"
+                          data-bs-target="#offcanvasHeader"
                           >Contact</a
                         >
                       </li>
@@ -165,7 +193,7 @@
       <article
         data-bs-spy="scroll"
         data-bs-target="#navbar-scrollspy"
-        data-bs-threshold="0,1" 
+        data-bs-threshold="0,1"
         data-bs-root-margin="-30% 0% -70%"
         data-bs-smooth-scroll="true"
         tabindex="0"
