fix: padding en footer

--- a/assets/css/_landing.css
+++ b/assets/css/_landing.css
@@ -511,7 +511,7 @@
   width: 100%;
   max-width: 100%;
   top: 0;
-  padding: 3rem 0;
+  padding: 3rem 0 2rem;
   color: white;
   height: unset;
 }
