outline btn pricing

--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -444,7 +444,7 @@
                   <h4 class="section-privacy-title">FAQs</h4>
                 </div>
                 <div class="col-lg-8 col-12">
-              <div class="accordion" id="accordionExample">
+              <div class="accordion faq" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
