--- a/assets/css/_landing.css
+++ b/assets/css/_landing.css
@@ -343,26 +343,33 @@
 .card.card-free {
   background-color: #fff !important;
   border-radius: 16px;
-  border: 1px solid #233D9B; 
- } 
- .card.card-pro {
-   background: linear-gradient(155deg, rgba(2, 0, 36, 1) 0%, rgba(17, 17, 235, 1) 66%, rgba(255, 255, 255, 1) 100%);
-   color: #fff;
-   border-radius: 16px;
-   border: none;
- } 
- .badge.badge-ozer {
-   background-color: #848fb1;
-   text-transform: uppercase;
-   border-radius: 8px;
- } 
- .list-card-ozer {
-   margin-bottom: 24px;
-   margin-top: 24px;
- } 
- .list-card-ozer li:not(:last-child) {
-   margin-bottom: 20px;
- }
+  border: 1px solid #233D9B;
+}
+.card.card-pro {
+  background: linear-gradient(155deg, rgba(2, 0, 36, 1) 0%, rgba(17, 17, 235, 1) 66%, rgba(255, 255, 255, 1) 100%);
+  color: #fff;
+  border-radius: 16px;
+  border: none;
+}
+.badge.badge-ozer {
+  background-color: #848fb1;
+  text-transform: uppercase;
+  border-radius: 8px;
+}
+.list-card-ozer {
+  margin-bottom: 24px;
+  margin-top: 24px;
+}
+.list-card-ozer li:not(:last-child) {
+  margin-bottom: 20px;
+}
+.btn-outline-light:hover{
+  color: var(--btn-primary-color);
+}
+.btn-outline-light:focus{
+  box-shadow: 0 0 0 .25rem var(--btn-primary-border-focus);
+  border: none;
+}
 a.btn.btn-lg.btn-primary.btn-card-pricing,
 a.btn.btn-lg.btn-outline-light.btn-card-pricing {
   display: block;
@@ -392,6 +399,7 @@ a.btn.btn-lg.btn-outline-light.btn-card-pricing {
   padding: 16px 24px;
   height: 56px;
   border-radius: 16px;
+  line-height: normal;
 }
 .accordion-button:not(.collapsed){
   box-shadow: none;
@@ -414,14 +422,14 @@ button:focus:not(:focus-visible) {
   border-bottom-left-radius: 16px;
 }
 .accordion-button:not(.collapsed){
-  background-color: #F5F7FD !important;
+  background-color: #F5F7FD;
 }
 .accordion-item:first-of-type {
   border-radius: 16px;
 }
 .accordion-item:first-of-type>.accordion-header .accordion-button {
-  border-top-left-radius: 16px !important;
-  border-top-right-radius: 16px !important;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
 }
 .accordion-item:not(:first-of-type), .accordion-item:last-of-type>.accordion-header .accordion-button.collapsed {
   border-radius: 16px;
