--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -422,7 +422,7 @@
               <div class="col-sm-6">
                 <div class="card card-pro">
                   <div class="card-body">
-                    <span class="badge badge-ozer mb-1">Pro</span>
+                    <span class="badge badge-ozer badge-pro mb-1">Pro</span>
                     <h3 class="card-title">$2.99/mo</h3>
                     <ul class="list-card-ozer">
                       <li>Unlimited group audio message transcriptions</li>
