--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -430,7 +430,7 @@
             </div>
           </div>
         </section>
-        <section id="scrollspyHeading4">          
+        <section id="scrollspyHeading4">
           <div class="container">
             <h4 class="section-privacy-title">Pricing</h4>
             <div class="row">
@@ -444,7 +444,9 @@
                       <li>100 contact message transcriptions</li>
                       <li>1000 messages the first month</li>
                     </ul>
-                    <a href="#" class="btn btn-lg btn-primary btn-card-pricing">Sign up</a>
+                    <a href="#" class="btn btn-lg btn-primary btn-card-pricing"
+                      >Sign up</a
+                    >
                   </div>
                 </div>
               </div>
@@ -458,76 +460,127 @@
                       <li>100 contact message transcriptions</li>
                       <li>1000 messages the first month</li>
                     </ul>
-                    <a href="#" class="btn btn-lg btn-outline-light btn-card-pricing">Start free trial</a>
+                    <a
+                      href="#"
+                      class="btn btn-lg btn-primary dark-mode btn-card-pricing"
+                      >Start free trial</a
+                    >
                   </div>
                 </div>
               </div>
             </div>
-        </div>
+          </div>
         </section>
         <section id="scrollspyHeading5">
           <div class="container">
             <div class="section-faq-container">
               <div class="row">
-                <div class="col-lg-4">                
+                <div class="col-lg-4">
                   <h4 class="section-privacy-title">FAQs</h4>
                 </div>
                 <div class="col-lg-8 col-12">
-              <div class="accordion faq" id="accordionExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                      aria-expanded="true" aria-controls="collapseOne">
-                      How does Ozer work?
-                    </button>
-                  </h2>
-                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      Ozer converts Whatsapp audio messages to text, without user intervention. Transcription is received in WhatsApp just after the audio message.
+                  <div class="accordion faq" id="accordionExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingOne">
+                        <button
+                          class="accordion-button"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseOne"
+                          aria-expanded="true"
+                          aria-controls="collapseOne"
+                        >
+                          How does Ozer work?
+                        </button>
+                      </h2>
+                      <div
+                        id="collapseOne"
+                        class="accordion-collapse collapse show"
+                        aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                          Ozer converts Whatsapp audio messages to text, without
+                          user intervention. Transcription is received in
+                          WhatsApp just after the audio message.
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingTwo">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseTwo"
+                          aria-expanded="false"
+                          aria-controls="collapseTwo"
+                        >
+                          Can I still listen to the original audio message?
+                        </button>
+                      </h2>
+                      <div
+                        id="collapseTwo"
+                        class="accordion-collapse collapse"
+                        aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                          Lorem ipsum dolor sit, amet consectetur adipisicing
+                          elit. Sed, sequi maiores nemo ipsum laudantium culpa
+                          vel quisquam, esse quibusdam, rem explicabo natus
+                          debitis recusandae harum assumenda ullam nulla
+                          provident adipisci.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingThree">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseThree"
+                          aria-expanded="false"
+                          aria-controls="collapseThree"
+                        >
+                          But, how do you do it?
+                        </button>
+                      </h2>
+                      <div
+                        id="collapseThree"
+                        class="accordion-collapse collapse"
+                        aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                          Lorem, ipsum dolor sit amet consectetur adipisicing
+                          elit. Ea consectetur sed obcaecati numquam praesentium
+                          delectus quod facere, laudantium consequuntur est
+                          maxime reiciendis sunt architecto commodi voluptate
+                          quidem minima. Minima, dolore.
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
-                
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-                      aria-expanded="false" aria-controls="collapseTwo">
-                      Can I still listen to the original audio message?
-                    </button>
-                  </h2>
-                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, sequi maiores nemo ipsum laudantium culpa vel quisquam, esse quibusdam, rem explicabo natus debitis recusandae harum assumenda ullam nulla provident adipisci.
-                    </div>
-                  </div>
+              </div>
+            </div>
+
+            <div class="section-highlighted">
+              <div class="section-highlighted-container">
+                <div>
+                  <h3 class="section-highlighted-title">Why listen when you can read?</h3>
+                  <p class="section-highlighted-text">Try our transcription bot today!</p>
                 </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
-                      aria-expanded="false" aria-controls="collapseThree">
-                      But, how do you do it?
-                    </button>
-                  </h2>
-                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea consectetur sed obcaecati numquam praesentium delectus quod facere, laudantium consequuntur est maxime reiciendis sunt architecto commodi voluptate quidem minima. Minima, dolore.
-                    </div>
-                  </div>
-                </div>                
-              </div>          
-              
+                <button type="button" class="btn btn-lg btn-primary dark-mode">
+                  Try for free
+                </button>
+              </div>
             </div>
           </div>
-          
-            </div>
-        </div>
         </section>
-
-
-
 
         <section id="scrollspyHeading6">
           <div class="container">
