se reemplazan logos y se corrigen arreglos de reu

--- a/views/landing/terms.html
+++ b/views/landing/terms.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ozer</title>
+    <link rel="icon" type="image/x-icon" href="../../img/favicon.svg">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -375,9 +376,8 @@
               <div class="footer-brand-logo">
                 <img
                   src="../../img/landing/Logo-Ozer.svg"
-                  alt="Logotipo Ozer"
+                  alt="Logotipo Ozer" width="150"
                 />
-                <span>Ozer.bot</span>
               </div>
 
               <button type="button" class="btn btn-lg btn-primary dark-mode">
