--- a/assets/css/_landing.css
+++ b/assets/css/_landing.css
@@ -120,6 +120,7 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+  margin-bottom: 3rem;
 }
 .section-home .home .home-text .home-text_title {
   font-size: 32px;
