--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ozer</title>
-    <link rel="icon" type="image/x-icon" href="../../img/favicon.svg">
+    <!-- Favicon para modo oscuro -->
+    <link rel="icon" type="image/x-icon" href="../../img/favicon-light.svg" media="(prefers-color-scheme: dark)">
+    <!-- Favicon para modo claro -->
+    <link rel="icon" type="image/x-icon" href="../../img/favicon-dark.svg" media="(prefers-color-scheme: light)">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -312,58 +315,63 @@
               <h2 class="section-listen-title">
                 Can't listen to messages right now? Read them instead
               </h2>
-              <div class="section-listen-container">
-                <div class="listen-item">
-                  <div class="icon-box">
-                    <span class="material-symbols-outlined"> groups_3 </span>
+              <div class="d-lg-flex gap-2">
+                <div class="section-listen-container">
+                  <div class="listen-item">
+                    <div class="icon-box">
+                      <span class="material-symbols-outlined"> groups_3 </span>
+                    </div>
+                    <div class="text-box">
+                      <p class="mb-0">In a meeting</p>
+                    </div>
                   </div>
-                  <div class="text-box">
-                    <p class="mb-0">In a meeting</p>
+                  <div class="listen-item">
+                    <div class="icon-box">
+                      <span class="material-symbols-outlined"> apartment </span>
+                    </div>
+                    <div class="text-box">
+                      <p class="mb-0">Shared office space</p>
+                    </div>
                   </div>
-                </div>
-                <div class="listen-item">
-                  <div class="icon-box">
-                    <span class="material-symbols-outlined"> apartment </span>
-                  </div>
-                  <div class="text-box">
-                    <p class="mb-0">Shared office space</p>
-                  </div>
-                </div>
-                <div class="listen-item">
-                  <div class="icon-box">
-                    <span class="material-symbols-outlined">
-                      directions_bus
-                    </span>
-                  </div>
-                  <div class="text-box">
-                    <p class="mb-0">On the bus</p>
-                  </div>
-                </div>
-                <div class="listen-item">
-                  <div class="icon-box">
-                    <span class="material-symbols-outlined"> coffee </span>
-                  </div>
-                  <div class="text-box">
-                    <p class="mb-0">At Starbucks</p>
+                  <div class="listen-item">
+                    <div class="icon-box">
+                      <span class="material-symbols-outlined">
+                        directions_bus
+                      </span>
+                    </div>
+                    <div class="text-box">
+                      <p class="mb-0">On the bus</p>
+                    </div>
                   </div>
                 </div>
-                <div class="listen-item">
-                  <div class="icon-box">
-                    <span class="material-symbols-outlined"> web </span>
+                <div class="section-listen-container">
+                  <div class="listen-item">
+                    <div class="icon-box">
+                      <span class="material-symbols-outlined"> coffee </span>
+                    </div>
+                    <div class="text-box">
+                      <p class="mb-0">At Starbucks</p>
+                    </div>
                   </div>
-                  <div class="text-box">
-                    <p class="mb-0">On a call</p>
+                  <div class="listen-item">
+                    <div class="icon-box">
+                      <span class="material-symbols-outlined"> web </span>
+                    </div>
+                    <div class="text-box">
+                      <p class="mb-0">On a call</p>
+                    </div>
                   </div>
-                </div>
-                <div class="listen-item">
-                  <div class="icon-box">
-                    <span class="material-symbols-outlined"> headset_off </span>
-                  </div>
-                  <div class="text-box">
-                    <p class="mb-0">Hearing impaired</p>
+                  <div class="listen-item">
+                    <div class="icon-box">
+                      <span class="material-symbols-outlined"> headset_off </span>
+                    </div>
+                    <div class="text-box">
+                      <p class="mb-0">Hearing impaired</p>
+                    </div>
                   </div>
                 </div>
               </div>
+              
             </div>
           </div>
         </section>
@@ -683,8 +691,8 @@
             <div class="footer-brand">
               <div class="footer-brand-logo">
                 <img
-                  src="../../img/landing/Logo-Ozer.svg"
-                  alt="Logotipo Ozer" width="150"
+                  src="../../img/landing/Logo-Ozer-white.svg"
+                  alt="Logotipo Ozer" height="48"
                 />
               </div>
 
