--- a/views/landing/terms.html
+++ b/views/landing/terms.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ozer</title>
-    <link rel="icon" type="image/x-icon" href="../../img/favicon.svg">
+    <!-- Favicon para modo oscuro -->
+    <link rel="icon" type="image/x-icon" href="../../img/favicon-light.svg" media="(prefers-color-scheme: dark)">
+    <!-- Favicon para modo claro -->
+    <link rel="icon" type="image/x-icon" href="../../img/favicon-dark.svg" media="(prefers-color-scheme: light)">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -375,8 +378,8 @@
             <div class="footer-brand">
               <div class="footer-brand-logo">
                 <img
-                  src="../../img/landing/Logo-Ozer.svg"
-                  alt="Logotipo Ozer" width="150"
+                  src="../../img/landing/Logo-Ozer-white.svg"
+                  alt="Logotipo Ozer" height="48"
                 />
               </div>
 
