navegacion en privacy y terms

--- a/views/landing/privacy.html
+++ b/views/landing/privacy.html
@@ -77,54 +77,42 @@
                       <li class="nav-item">
                         <a
                           class="nav-link"
-                          href="#scrollspyHeading1"
-                          data-bs-dismiss="offcanvas"
-                          data-bs-target="#offcanvasHeader"
+                          href="./landing.html#scrollspyHeading1"
                           >Home</a
                         >
                       </li>
                       <li class="nav-item">
                         <a
                           class="nav-link"
-                          href="#scrollspyHeading2"
-                          data-bs-dismiss="offcanvas"
-                          data-bs-target="#offcanvasHeader"
+                          href="./landing.html#scrollspyHeading2"
                           >Benefits</a
                         >
                       </li>
                       <li class="nav-item">
                         <a
                           class="nav-link"
-                          href="#scrollspyHeading3"
-                          data-bs-dismiss="offcanvas"
-                          data-bs-target="#offcanvasHeader"
+                          href="./landing.html#scrollspyHeading3"
                           >Privacy</a
                         >
                       </li>
                       <li class="nav-item">
                         <a
                           class="nav-link"
-                          href="#scrollspyHeading4"
-                          data-bs-dismiss="offcanvas"
-                          data-bs-target="#offcanvasHeader"
+                          href="./landing.html#scrollspyHeading4"
                           >Pricing</a
                         >
                       </li>
                       <li class="nav-item">
                         <a
                           class="nav-link"
-                          href="#scrollspyHeading5"
-                          data-bs-dismiss="offcanvas"
-                          data-bs-target="#offcanvasHeader"
+                          href="./landing.html#scrollspyHeading5"
                           >FAQs</a
                         >
                       </li>
                       <li class="nav-item">
                         <a
                           class="nav-link"
-                          href="#scrollspyHeading6"
-                          data-bs-dismiss="offcanvas"
-                          data-bs-target="#offcanvasHeader"
+                          href="./landing.html#scrollspyHeading6"
                           >Contact</a
                         >
                       </li>
