--- a/views/install/1-install-qr.html
+++ b/views/install/1-install-qr.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ozer</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../../img/favicon-light.svg" id="favicon">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -184,6 +186,8 @@
         correctLevel: QRCode.CorrectLevel.H,
       });
     </script>
+    <!-- Favicon -->
+    <script src="../../js/favicon.js"></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
   </body>
