--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ozer</title>
-    <!-- Favicon para modo oscuro -->
-    <link rel="icon" type="image/x-icon" href="../../img/favicon-light.svg" media="(prefers-color-scheme: dark)">
-    <!-- Favicon para modo claro -->
-    <link rel="icon" type="image/x-icon" href="../../img/favicon-dark.svg" media="(prefers-color-scheme: light)">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../../img/favicon-light.svg" id="favicon">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -767,6 +765,8 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <!-- Favicon -->
+    <script src="../../js/favicon.js"></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
     <!-- Validación de formulario -->
